services/uptime-kuma/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
  labels:
    app: uptime-kuma
spec:
  parentRefs:
    - name: uptime-kuma
      namespace: uptime-kuma
      sectionName: https
  hostnames:
    - "status.CHANGEME_DOMAIN"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: uptime-kuma
          port: 3001
